fixed gallery on mobile

--- a/client/src/styles/_lightbox.scss
+++ b/client/src/styles/_lightbox.scss
@@ -161,3 +161,19 @@
     margin: 0 auto;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .gallery {
+    .imageGallery1 {
+      & a {
+        width: 100%;
+        &::after {
+          display: none;
+        }
+      }
+      & img {
+        object-fit: cover;
+      }
+    }
+  }
+}
